objects/User__x.object
<CustomObject>
    <fields>
        <fullName>UserPermissionsSupportUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPermissionsSupportUser</externalDeveloperName>
        <label>Service Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesActivityRemindersPopup__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesActivityRemindersPopup</externalDeveloperName>
        <label>ActivityRemindersPopup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesApexPagesDeveloperMode__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesApexPagesDeveloperMode</externalDeveloperName>
        <label>ApexPagesDeveloperMode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesCacheDiagnostics__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesCacheDiagnostics</externalDeveloperName>
        <label>CacheDiagnostics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesContentEmailAsAndWhen__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesContentEmailAsAndWhen</externalDeveloperName>
        <label>ContentEmailAsAndWhen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesContentNoEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesContentNoEmail</externalDeveloperName>
        <label>ContentNoEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesCreateLEXAppsWTShown__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesCreateLEXAppsWTShown</externalDeveloperName>
        <label>CreateLEXAppsWTShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisCommentAfterLikeEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisCommentAfterLikeEmail</externalDeveloperName>
        <label>DisCommentAfterLikeEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisMentionsCommentEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisMentionsCommentEmail</externalDeveloperName>
        <label>DisMentionsCommentEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisProfPostCommentEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisProfPostCommentEmail</externalDeveloperName>
        <label>DisProfPostCommentEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableAllFeedsEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableAllFeedsEmail</externalDeveloperName>
        <label>DisableAllFeedsEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableBookmarkEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableBookmarkEmail</externalDeveloperName>
        <label>DisableBookmarkEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableChangeCommentEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableChangeCommentEmail</externalDeveloperName>
        <label>DisableChangeCommentEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableEndorsementEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableEndorsementEmail</externalDeveloperName>
        <label>DisableEndorsementEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableFileShareNotificat__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableFileShareNotificationsForApi</externalDeveloperName>
        <label>DisableFileShareNotificationsForApi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableFollowersEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableFollowersEmail</externalDeveloperName>
        <label>DisableFollowersEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableLaterCommentEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableLaterCommentEmail</externalDeveloperName>
        <label>DisableLaterCommentEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableLikeEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableLikeEmail</externalDeveloperName>
        <label>DisableLikeEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableMentionsPostEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableMentionsPostEmail</externalDeveloperName>
        <label>DisableMentionsPostEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableMessageEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableMessageEmail</externalDeveloperName>
        <label>DisableMessageEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableProfilePostEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableProfilePostEmail</externalDeveloperName>
        <label>DisableProfilePostEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableSharePostEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesDisableSharePostEmail</externalDeveloperName>
        <label>DisableSharePostEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesEnableAutoSubForFeeds__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesEnableAutoSubForFeeds</externalDeveloperName>
        <label>EnableAutoSubForFeeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesEventRemindersCheckboxDef__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesEventRemindersCheckboxDefault</externalDeveloperName>
        <label>EventRemindersCheckboxDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesGlobalNavBarWTShown__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesGlobalNavBarWTShown</externalDeveloperName>
        <label>GlobalNavBarWTShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesGlobalNavGridMenuWTShown__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesGlobalNavGridMenuWTShown</externalDeveloperName>
        <label>GlobalNavGridMenuWTShown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideBiggerPhotoCallout__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideBiggerPhotoCallout</externalDeveloperName>
        <label>HideBiggerPhotoCallout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideCSNDesktopTask__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideCSNDesktopTask</externalDeveloperName>
        <label>HideCSNDesktopTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideCSNGetChatterMobileTa__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideCSNGetChatterMobileTask</externalDeveloperName>
        <label>HideCSNGetChatterMobileTask</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideChatterOnboardingSpla__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideChatterOnboardingSplash</externalDeveloperName>
        <label>HideChatterOnboardingSplash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideEndUserOnboardingAssi__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideEndUserOnboardingAssistantModal</externalDeveloperName>
        <label>HideEndUserOnboardingAssistantModal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideLightningMigrationMod__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideLightningMigrationModal</externalDeveloperName>
        <label>HideLightningMigrationModal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideS1BrowserUI__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideS1BrowserUI</externalDeveloperName>
        <label>HideS1BrowserUI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideSecondChatterOnboardi__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideSecondChatterOnboardingSplash</externalDeveloperName>
        <label>HideSecondChatterOnboardingSplash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideSfxWelcomeMat__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesHideSfxWelcomeMat</externalDeveloperName>
        <label>HideSfxWelcomeMat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesLightningExperiencePrefer__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesLightningExperiencePreferred</externalDeveloperName>
        <label>LightningExperiencePreferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesPathAssistantCollapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesPathAssistantCollapsed</externalDeveloperName>
        <label>PathAssistantCollapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesPreviewLightning__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesPreviewLightning</externalDeveloperName>
        <label>PreviewLightning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesReminderSoundOff__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesReminderSoundOff</externalDeveloperName>
        <label>ReminderSoundOff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCityToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowCityToExternalUsers</externalDeveloperName>
        <label>ShowCityToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCityToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowCityToGuestUsers</externalDeveloperName>
        <label>ShowCityToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCountryToExternalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowCountryToExternalUsers</externalDeveloperName>
        <label>ShowCountryToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCountryToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowCountryToGuestUsers</externalDeveloperName>
        <label>ShowCountryToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowEmailToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowEmailToExternalUsers</externalDeveloperName>
        <label>ShowEmailToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowEmailToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowEmailToGuestUsers</externalDeveloperName>
        <label>ShowEmailToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowFaxToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowFaxToExternalUsers</externalDeveloperName>
        <label>ShowFaxToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowFaxToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowFaxToGuestUsers</externalDeveloperName>
        <label>ShowFaxToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowManagerToExternalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowManagerToExternalUsers</externalDeveloperName>
        <label>ShowManagerToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowManagerToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowManagerToGuestUsers</externalDeveloperName>
        <label>ShowManagerToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowMobilePhoneToExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowMobilePhoneToExternalUsers</externalDeveloperName>
        <label>ShowMobilePhoneToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowMobilePhoneToGuestUse__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowMobilePhoneToGuestUsers</externalDeveloperName>
        <label>ShowMobilePhoneToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowPostalCodeToExternalU__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowPostalCodeToExternalUsers</externalDeveloperName>
        <label>ShowPostalCodeToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowPostalCodeToGuestUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowPostalCodeToGuestUsers</externalDeveloperName>
        <label>ShowPostalCodeToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowProfilePicToGuestUser__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowProfilePicToGuestUsers</externalDeveloperName>
        <label>ShowProfilePicToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStateToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowStateToExternalUsers</externalDeveloperName>
        <label>ShowStateToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStateToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowStateToGuestUsers</externalDeveloperName>
        <label>ShowStateToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStreetAddressToExtern__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowStreetAddressToExternalUsers</externalDeveloperName>
        <label>ShowStreetAddressToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStreetAddressToGuestU__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowStreetAddressToGuestUsers</externalDeveloperName>
        <label>ShowStreetAddressToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowTitleToExternalUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowTitleToExternalUsers</externalDeveloperName>
        <label>ShowTitleToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowTitleToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowTitleToGuestUsers</externalDeveloperName>
        <label>ShowTitleToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowWorkPhoneToExternalUs__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowWorkPhoneToExternalUsers</externalDeveloperName>
        <label>ShowWorkPhoneToExternalUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowWorkPhoneToGuestUsers__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesShowWorkPhoneToGuestUsers</externalDeveloperName>
        <label>ShowWorkPhoneToGuestUsers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesSortFeedByComment__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesSortFeedByComment</externalDeveloperName>
        <label>SortFeedByComment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserPreferencesTaskRemindersCheckboxDefa__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>UserPreferencesTaskRemindersCheckboxDefault</externalDeveloperName>
        <label>TaskRemindersCheckboxDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserRoleId__c</fullName>
        <externalDeveloperName>UserRoleId</externalDeveloperName>
        <label>Role ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <externalDeveloperName>UserType</externalDeveloperName>
        <label>User Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>PowerPartner</fullName>
                </value>
                <value>
                    <fullName>PowerCustomerSuccess</fullName>
                </value>
                <value>
                    <fullName>CustomerSuccess</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
                <value>
                    <fullName>CspLitePortal</fullName>
                </value>
                <value>
                    <fullName>CsnOnly</fullName>
                </value>
                <value>
                    <fullName>SelfService</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Deactivation_By_c__c</fullName>
        <externalDeveloperName>User_Deactivation_By__c</externalDeveloperName>
        <label>User Deactivation - By</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Deactivation_Date_Time_c__c</fullName>
        <externalDeveloperName>User_Deactivation_Date_Time__c</externalDeveloperName>
        <label>User Deactivation - Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <externalDeveloperName>Username</externalDeveloperName>
        <label>Username</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chk_TrainingCompleted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>chk_TrainingCompleted__c</externalDeveloperName>
        <label>Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dat_ExpirationDate_c__c</fullName>
        <externalDeveloperName>dat_ExpirationDate__c</externalDeveloperName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fchk_Logged_on_in_the_last_30_days_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>fchk_Logged_on_in_the_last_30_days__c</externalDeveloperName>
        <label>Logged on in the last 30 days</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fchk_Logged_on_in_the_last_7_days_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>fchk_Logged_on_in_the_last_7_days__c</externalDeveloperName>
        <label>Logged on in the last 7 days</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fchk_Logged_on_in_the_last_90_days_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>fchk_Logged_on_in_the_last_90_days__c</externalDeveloperName>
        <label>Logged on in the last 90 days</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ftxt_SFDC_18_char_ID_c__c</fullName>
        <externalDeveloperName>ftxt_SFDC_18_char_ID__c</externalDeveloperName>
        <label>SFDC 18 char ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Deactivations_c__c</fullName>
        <externalDeveloperName>of_Deactivations__c</externalDeveloperName>
        <label># of Deactivations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pkl_Region_c__c</fullName>
        <externalDeveloperName>pkl_Region__c</externalDeveloperName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>AP - China</fullName>
                </value>
                <value>
                    <fullName>AP - Japan</fullName>
                </value>
                <value>
                    <fullName>AP - Korea</fullName>
                </value>
                <value>
                    <fullName>ASEAN</fullName>
                </value>
                <value>
                    <fullName>AP - ANZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pkl_TEEmployee_c__c</fullName>
        <externalDeveloperName>pkl_TEEmployee__c</externalDeveloperName>
        <label>TE Employee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pkl_TrainingSession_c__c</fullName>
        <externalDeveloperName>pkl_TrainingSession__c</externalDeveloperName>
        <label>Training Session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bensheim, Germany (Nov 24)</fullName>
                </value>
                <value>
                    <fullName>Montcada, Spain (Nov 20 &amp; 21)</fullName>
                </value>
                <value>
                    <fullName>Pontoise, France (Nov 18 &amp; 19)</fullName>
                </value>
                <value>
                    <fullName>Troy, MI (Nov 12 &amp; 13)</fullName>
                </value>
                <value>
                    <fullName>Winston-Salem, NC (Nov 11 &amp; 12)</fullName>
                </value>
                <value>
                    <fullName>Shanghai, China (Nov 17-18)</fullName>
                </value>
                <value>
                    <fullName>Changchun, China (Nov 24-25)</fullName>
                </value>
                <value>
                    <fullName>Guangzhou, China (Nov 27-28)</fullName>
                </value>
                <value>
                    <fullName>Shanghai, China (Dec 1-2)</fullName>
                </value>
                <value>
                    <fullName>Kawasaki, Japan (Nov 17)</fullName>
                </value>
                <value>
                    <fullName>Kawasaki, Japan (Nov 18)</fullName>
                </value>
                <value>
                    <fullName>Kawaskai, Japan (Dec 5)</fullName>
                </value>
                <value>
                    <fullName>Singapore (Nov 20-21)</fullName>
                </value>
                <value>
                    <fullName>Seoul, Korea (Nov 27-28)</fullName>
                </value>
                <value>
                    <fullName>Warsaw, Poland (Dec 8-10)</fullName>
                </value>
                <value>
                    <fullName>Bensheim, Germany (Nov. 25)</fullName>
                </value>
                <value>
                    <fullName>Bensheim, Germany (Nov. 27 Auditorium)</fullName>
                </value>
                <value>
                    <fullName>Bensheim, Germany (Nov. 28 Bensheim 1)</fullName>
                </value>
                <value>
                    <fullName>Swindon, UK (Nov 20-21)</fullName>
                </value>
                <value>
                    <fullName>Pune, India (Nov 25-26)</fullName>
                </value>
                <value>
                    <fullName>Munich, Germany (Dec 11-12)</fullName>
                </value>
                <value>
                    <fullName>Kettering, Ohio (Dec 15-17)</fullName>
                </value>
                <value>
                    <fullName>Shanghai, China (Nov 19-20)</fullName>
                </value>
                <value>
                    <fullName>Bensheim, Germany (Nov. 27 Harrisburg)</fullName>
                </value>
                <value>
                    <fullName>Bensheim, Germany (Nov. 28 Bensheim 2)</fullName>
                </value>
                <value>
                    <fullName>Sao Paulo, Brazil (Dec 17-18)</fullName>
                </value>
                <value>
                    <fullName>Training - None (Project Team)</fullName>
                </value>
                <value>
                    <fullName>On-line Session</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pkl_VehicleType_c__c</fullName>
        <externalDeveloperName>pkl_VehicleType__c</externalDeveloperName>
        <label>Vehicle Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>ICT</fullName>
                </value>
                <value>
                    <fullName>Transportation Solutions</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>Sensors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>prevent_auto_deactivation_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>prevent_auto_deactivation__c</externalDeveloperName>
        <label>Prevent Auto Deactivation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>txt_TENetworkID_c__c</fullName>
        <externalDeveloperName>txt_TENetworkID__c</externalDeveloperName>
        <label>TE Network ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>User</label>
    <pluralLabel>Users</pluralLabel>
</CustomObject>